# NDKAdvanced

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/blend/ndkadvanced/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ffmpeg/: ffmpeg_main.cpp
app/src/main/cpp/ffmpeg/include/libavcodec/: dirac.h
app/src/main/cpp/ffmpegaudio/: AndroidLog.h  MNCallJava.h  MNFFmpeg.h  MNQueue.cpp  MNQueue.h  ffmpeg_audio_main.cpp
app/src/main/cpp/gif/: gif_main.cpp
app/src/main/cpp/hello/: hello_main.cpp
app/src/main/cpp/mmkv/: MMKV.cpp  MMKV.h  MMKV_main.cpp
app/src/main/cpp/rtmp/: CMakeLists.txt  rtmp_main.cpp
app/src/main/cpp/x264/: AudioChannel.cpp  AudioChannel.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  blendlog.h  safe_queue.h  x264_faac_main.cpp  x264_main.cpp
app/src/main/java/com/blend/ndkadvanced/: HelloWorldActivity.java  MainActivity.java  NdkApplication.java
app/src/main/java/com/blend/ndkadvanced/audio/: AudioActivity.java  AudioRecorderProcess.java  MusicClipProcess.java  MusicMixProcess.java  VideoAddProcess.java  VideoAndMusicMixProcess.java
app/src/main/java/com/blend/ndkadvanced/camera1/: Camera1Activity.java  Camera1SurfaceView.java
app/src/main/java/com/blend/ndkadvanced/camera2/: Camera2Helper.java
app/src/main/java/com/blend/ndkadvanced/camerax/: CameraXActivity.java  CameraXHelper.java
app/src/main/java/com/blend/ndkadvanced/fbo/: AbstractFboFilter.java  AbstractFilter.java  BeautyFilter.java  CameraFilter.java  CameraHelper.java  CameraRender.java  CameraSurfaceView.java  CameraView.java  EGLEnv.java  FBOActivity.java  MediaRecorder.java  MediaRecorder1.java  OpenGLUtils.java  RecordFilter.java  ScreenFilter.java  SoulFilter.java  SplitFilter.java  SplitFilterThree.java  SplitFilterTwo.java
app/src/main/java/com/blend/ndkadvanced/ffmpeg/: FfmpegActivity.java
app/src/main/java/com/blend/ndkadvanced/ffmpegaudio/: FfmpegAudioActivity.java
app/src/main/java/com/blend/ndkadvanced/filter/: CameraFilterActivity.java  CameraGLSurfaceView.java  CameraHelper.java  CameraRender.java  CameraView.java  ScreenFilter.java
app/src/main/java/com/blend/ndkadvanced/gif/: GifDemoActivity.java  GifHandler.java
app/src/main/java/com/blend/ndkadvanced/golomb/: GolombActivity.java  GolombDemo.java  MediaCodec.java
app/src/main/java/com/blend/ndkadvanced/h264/: H264Activity.java  H264Player.java  ScreenShortService.java
app/src/main/java/com/blend/ndkadvanced/h265/: H265Activity.java
app/src/main/java/com/blend/ndkadvanced/hello/: HelloWorldActivity.java
app/src/main/java/com/blend/ndkadvanced/mmkv/: MMKV.java  MMKVActivity.java
app/src/main/java/com/blend/ndkadvanced/opengl/: ConeRender.java  CubeRender.java  OpenGLActivity.java  OvalRender.java  PictureFilterRender.java  PictureRender.java  (+4 more)
app/src/main/res/drawable/: record_button_background_selected.xml  record_button_background_unselected.xml
app/src/main/res/layout/: activity_audio.xml  activity_base_open_gl_lactivity.xml  activity_camera1.xml  activity_camera_filter.xml  activity_camera_x.xml  activity_fbo.xml  activity_ffmpeg.xml  activity_ffmpeg_audio.xml  activity_gif_demo.xml  activity_golomb.xml  activity_h264.xml  activity_h265.xml  activity_hello_world.xml  activity_main.xml  activity_mmkv_activity.xml  activity_open_gl.xml  activity_picture_filter_open_gl.xml  activity_player_screen_share.xml  activity_player_video_chat.xml  activity_push_screen_share.xml  activity_push_video_chat.xml  activity_rtmp.xml  activity_vary_open_glactivity.xml  activity_x264.xml  layout_discview.xml
app/src/main/res/raw/: beauty_frag.frag  camera_frag.frag  camera_frag1.frag  camera_frag2.frag  camera_frag3.frag  camera_frag4.frag  camera_vert.vert  cone_vert.vert  fbo_base_frag.frag  picture_filter_frag.frag  picture_filter_vert.vert  soul_frag.frag  split2_screen.frag  split3_screen.frag
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/blend/ndkadvanced/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+59 files in other folders)
